[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levels/story_mode/dialog/DialogUI.gd" type="Script" id=1]

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ColorRect/DialogTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.045 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 157, 189 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:rect_rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "talking"
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/ColorRect/DialogTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PortraitRect/VBoxContainer/PortraitTextureRect:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.6, 0.0, 0.6, 0.0, 0.6, 0.0, 0.6, 0.0, 0.6, 0.0 ]
}

[node name="DialogUI" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -220.0
margin_right = 356.0
margin_bottom = -19.0
script = ExtResource( 1 )

[node name="PortraitRect" type="ColorRect" parent="."]
margin_right = 230.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.47
color = Color( 0.0402457, 0.0918218, 0.292969, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PortraitRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PortraitTextureRect" type="TextureRect" parent="PortraitRect/VBoxContainer"]
anchor_top = 0.045
anchor_bottom = 0.045
margin_right = 157.0
margin_bottom = 189.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="PortraitRect/VBoxContainer"]
margin_top = 187.0
margin_right = 230.0
margin_bottom = 201.0
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 234.0
margin_right = 724.0
margin_bottom = 201.0
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 490.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0117647, 0.0509804, 0.203922, 1 )

[node name="DialogTextLabel" type="RichTextLabel" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
visible_characters = 0
percent_visible = 0.0

[node name="ContinueButton" type="Button" parent="VBoxContainer/ColorRect/DialogTextLabel"]
visible = false
margin_left = 421.0
margin_top = 168.0
margin_right = 474.0
margin_bottom = 188.0
text = "Next"

[node name="PanelContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 201.0
margin_right = 490.0
margin_bottom = 201.0
custom_constants/margin_right = 60
custom_constants/margin_left = 60

[node name="ChoiceContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 60.0
margin_right = 430.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 16 )
anims/talking = SubResource( 17 )

[connection signal="pressed" from="VBoxContainer/ColorRect/DialogTextLabel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
